Dropdown component fixes scrollbar added according to the style Toggle button

--- a/src/index.css
+++ b/src/index.css
@@ -32,15 +32,55 @@ body {
     font-weight: 600;
     font-size: 13px;
   }
+
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #141518 #ffffff;
+  }
+
+  *::-webkit-scrollbar {
+    width: 6px;
+    width: 6px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #ffffff00;
+  }
+
+  *::-webkit-scrollbar-track:hover {
+    background-color: #ffffff00;
+  }
+
+  *::-webkit-scrollbar-track:active {
+    background-color: #ffffff00;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: #141518;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #141518;
+  }
+
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #141518;
+  }
 }
 
 @layer utilities {
   /* Gradients */
   .gradient-main {
-    background: linear-gradient(105.97deg, #F37821 40.34%, #CA2501 85.3%);
+    background: linear-gradient(105.97deg, #f37821 40.34%, #ca2501 85.3%);
   }
   .chart-gradient-orange {
-    background: linear-gradient(180deg, #F37821 0%, rgba(243, 120, 33, 0.8) 0.01%, rgba(243, 120, 33, 0) 100%);
+    background: linear-gradient(
+      180deg,
+      #f37821 0%,
+      rgba(243, 120, 33, 0.8) 0.01%,
+      rgba(243, 120, 33, 0) 100%
+    );
   }
   .chart-gradient-dark-blue {
     background: linear-gradient(180deg, rgba(48, 83, 191, 0.8) 0%, rgba(48, 83, 191, 0) 100%);
@@ -71,7 +111,7 @@ body {
     line-height: 120%;
     @apply font-semibold uppercase text-xs;
   }
-  
+
   .caps-3 {
     letter-spacing: 0.04em;
     line-height: 120%;
